--- a/AndroidCustomFontViews/app/src/main/res/layout/activity_main.xml
+++ b/AndroidCustomFontViews/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:layout_height="match_parent" tools:context=".MainActivity">
+
+    <android.support.v7.widget.Toolbar
+        style="@style/AppTheme"
+        android:id="@+id/mytoolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/primaryColor"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+        <androidcustomfontviews.ubelab.com.androidcustomfontviews.views.RobotoTextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="ANDROID CUSTOM FONTS"
+            android:textSize="@dimen/abc_text_size_small_material"
+            android:textColor="@android:color/white"
+            custom:customFont="roboto"
+            />
+        </android.support.v7.widget.Toolbar>
 
     <ScrollView
+        android:layout_below="@+id/mytoolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin" >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
